[tool.poetry]
name = "pycounts_pev"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Paul Villanueva"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
